# Clype

./: .gitignore  ARCHITECTURE.md  CALLING.md  CALLING_FEATURES_SUMMARY.md  CALLING_GUIDE.md  CALLING_UI_COMPONENTS.md  CALLING_VISUAL_REFERENCE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  QUICK_REFERENCE.md  README.md  README_CALLING.md  SETUP.md  SUMMARY.md  VOICE_VIDEO_CALLING_COMPLETE.md  VOICE_VIDEO_CALLING_INDEX.md  WHAT_WAS_BUILT.md  docker-compose.yml  global.d.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy-backend.yml
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
app/workspace/: page.tsx
backend/: Dockerfile  pom.xml
backend/.github/workflows/: deploy-backend.yml
backend/src/main/resources/: application.yml
components/: theme-provider.tsx  theme-switcher.tsx
components/auth/: google-login.tsx
components/calls/: call-manager.tsx  incoming-call.tsx  quality-monitor.tsx  quick-call-panel.tsx  video-call.tsx  voice-call.tsx
components/desktop/: TitleBar.tsx
components/terminal/: terminal-display.tsx  terminal-editor.tsx  terminal-input.tsx  terminal-tab-bar.tsx  terminal-workspace.tsx
electron/: main.js
lib/: auth-store.ts  ice-servers.ts  tauri-utils.ts  terminal-store.ts  theme-store.ts  webrtc-client.ts  websocket-client.ts  window-store.ts
public/: manifest.json
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+28 files in other folders)
